--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,21 +8,22 @@ theme:
   features:
     - navigation.tabs
     - navigation.tabs.sticky
-  icon:
-    logo: material/food
+  #icon:
+  #  logo: material/food
   name: cinder
-  palette:
-    - scheme: default
-      primary: deep orange
-      toggle:
-        icon: material/brightness-7
-        name: Switch to dark mode
-    - scheme: slate
-      primary: teal
-      toggle:
-        icon: material/brightness-4
-        name: Switch to light mode
-#plugins:
+#  palette:
+#    - scheme: default
+#      primary: deep orange
+#      toggle:
+#        icon: material/brightness-7
+#        name: Switch to dark mode
+#    - scheme: slate
+#      primary: teal
+#      toggle:
+#        icon: material/brightness-4
+#        name: Switch to light mode
+plugins:
+#- with-pdf
 #- search
 #- offline
 #- tags:
