--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Sam Bell's Portfolio
+site_name: Sam's Portfolio
 site_url: https://sambell2.github.io
 site_description: My portfolio to display all of my programming and electronics projects.
 site_author: Sam Bell
