--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,38 +5,20 @@ site_author: Sam Bell
 site_dir: docs/
 docs_dir: src/
 theme:
-  features:
-    - navigation.tabs
-    - navigation.tabs.sticky
-  #icon:
-  #  logo: material/food
   name: cinder
   disable_nav_previous_next: true
   disable_footer: true
-#  palette:
-#    - scheme: default
-#      primary: deep orange
-#      toggle:
-#        icon: material/brightness-7
-#        name: Switch to dark mode
-#    - scheme: slate
-#      primary: teal
-#      toggle:
-#        icon: material/brightness-4
-#        name: Switch to light mode
 plugins:
-- with-pdf
-#- search
-#- offline
-#- tags:
-#  tags_file: tags.md
+  - with-pdf
+  - tags
 extra_css:
-  - css/custom.css
+  - extra/custom.css
 markdown_extensions:
   - attr_list
 nav:
   - Home: index.md
   - Gallery: gallery.md
+  - Tags: tags.md
   - Programming:
     - Chess Bot: programming/chess_bot.md
     - QR Code Generator: programming/qr_code_generator.md
