--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ extra_css:
 markdown_extensions:
   - attr_list
 nav:
-  - Home: index.md
+#  - Home: index.md
   - Gallery: gallery.md
 #  - Categories: tags.md
   - Programming:
